Fix text input field problem in /user/view_profile
Text input fields were truncated in change personal details form
in /user/view_profile page. CSS rule in scaffolding.less has been
commented out as a fix for now.

--- a/less/current/base/scaffolding.less
+++ b/less/current/base/scaffolding.less
@@ -124,11 +124,11 @@ body{
   outline:none;
 }
 
-input {
-  width: 3%;
-}
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+//input {
+//  width: 3%;
+//}
+//input::-webkit-outer-spin-button,
+//input::-webkit-inner-spin-button {
+//  -webkit-appearance: none;
+//  margin: 0;
+//}
